Convert to Shibboleth V3 parent POM and Java 7.