@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>net.shibboleth</groupId>
-        <artifactId>parent-v2</artifactId>
+        <artifactId>parent-v3</artifactId>
         <version>TRUNK-SNAPSHOT</version>
     </parent>
 
@@ -81,24 +81,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgument>-Djava.endorsed.dirs="target/endorsed"</compilerArgument>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Djava.endorsed.dirs="target/endorsed"</argLine>
-                </configuration>
             </plugin>
 
             <plugin>
